--- a/ci/lint.yml
+++ b/ci/lint.yml
@@ -1,10 +1,12 @@
 fmt:
   stage: lint
   script:
-    - cargo fmt --all -- --check
+    - cargo +nightly fmt --all -- --check
 
 clippy:
   stage: lint
   needs: ["fmt"]
   script:
-    - cargo clippy --workspace --all-targets --all-features -- -D warnings
+    - cargo +nightly clippy --workspace --all-targets --all-features -- -D warnings
+
+
