--- a/.gitlab/ci/images/runtime/Dockerfile
+++ b/.gitlab/ci/images/runtime/Dockerfile
@@ -2,10 +2,6 @@ ARG RUST_VERSION=1.91
 FROM rust:${RUST_VERSION}
 
 ARG DEBIAN_SNAPSHOT=20240601T000000Z
-ARG NEXTEST_VERSION=0.9.110
-ARG LLVM_COV_VERSION=0.6.21
-ARG CARGO_AUDIT_VERSION=0.21.2
-
 RUN set -eux; \
     rm -f /etc/apt/sources.list.d/debian.sources; \
     echo "deb [check-valid-until=no] https://snapshot.debian.org/archive/debian/${DEBIAN_SNAPSHOT}/ bookworm main" > /etc/apt/sources.list; \
@@ -21,11 +17,17 @@ RUN set -eux; \
 
 RUN rustup component add rustfmt clippy llvm-tools-preview
 
-RUN cargo install cargo-nextest --locked --version ${NEXTEST_VERSION} \
-    && cargo install cargo-llvm-cov --locked --version ${LLVM_COV_VERSION} \
-    && cargo install cargo-audit --locked --version ${CARGO_AUDIT_VERSION}
+ARG NEXTEST_VERSION=0.9.110
+RUN cargo install cargo-nextest --locked --version ${NEXTEST_VERSION}
+
+ARG LLVM_COV_VERSION=0.6.21
+RUN cargo install cargo-llvm-cov --locked --version ${LLVM_COV_VERSION}
+
+ARG CARGO_AUDIT_VERSION=0.21.2
+RUN cargo install cargo-audit --locked --version ${CARGO_AUDIT_VERSION}
 
 RUN useradd -m -u 1000 ci
 WORKDIR /build
 RUN chown -R ci:ci /build
 USER ci
+
