--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 include:
   - local: ".gitlab/ci/base.yml"
   - local: ".gitlab/ci/runtime-image.yml"
+  - local: ".gitlab/ci/no-code-gate.yml"
   - local: ".gitlab/ci/lint.yml"
   - local: ".gitlab/ci/test.yml"
   - local: ".gitlab/ci/quality.yml"
