Move echo to .sh for no-code-gate.yml

--- a/.gitlab/ci/no-code-gate.yml
+++ b/.gitlab/ci/no-code-gate.yml
@@ -1,7 +1,7 @@
 no-code-gate:
   stage: meta
   script:
-    - echo "non-code change detected; skipping Rust pipeline"
+    - .gitlab/ci/scripts/no-code-gate.sh
   rules:
     - changes:
         - "**/*.rs"
