--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,102 @@
+stages:
+  - bootstrap
+  - lint
+  - checks
+  - quality
+  - build & push
+  - release
+
+variables:
+  GIT_STRATEGY: fetch
+  GIT_FETCH_EXTRA_FLAGS: "--prune"
+  GIT_DEPTH: 1
+  GIT_SUBMODULE_STRATEGY: none
+  GIT_CLEAN_FLAGS: none
+  CARGO_TERM_COLOR: always
+  CI_RUST_VERSION: "1.91"
+  CI_RUST_IMAGE: "$CI_REGISTRY_IMAGE/ci:rust-$CI_RUST_VERSION"
+  RUSTFLAGS: "-C debuginfo=2"
+
+.rust-change-paths: &rust_paths
+  - "**/*.rs"
+  - "**/build.rs"
+  - "**/Cargo.toml"
+  - "**/Cargo.lock"
+  - "rust-toolchain*"
+  - ".cargo/**/*"
+  - "Dockerfile"
+  - "Dockerfile.*"
+  - "*/Dockerfile"
+  - "docker/**/*"
+
+.rules-master-always:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: on_success
+
+.rules-mr-master-code:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+      changes: *rust_paths
+      when: on_success
+
+.rules-mr-develop-code:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "develop"'
+      changes: *rust_paths
+      when: on_success
+
+.rules-dev-code-soft:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "develop"'
+      changes: *rust_paths
+      when: on_success
+      allow_failure: true
+
+.rules-feature-code-soft:
+  rules:
+    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+      changes: *rust_paths
+      when: on_success
+      allow_failure: true
+
+.rules-dev-code:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "develop"'
+      changes: *rust_paths
+      when: on_success
+
+.rules-feature-code:
+  rules:
+    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+      changes: *rust_paths
+      when: on_success
+
+.rules-docker-build-and-push:
+  rules:
+    - if: '$CI_COMMIT_TAG'
+      when: on_success
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      changes: *rust_paths
+      when: on_success
+    - when: never
+
+.rules-tag-only:
+  rules:
+    - if: '$CI_COMMIT_TAG'
+      when: on_success
+    - when: never
+
+default:
+  image: $CI_RUST_IMAGE
+  tags:
+    - primary
+  interruptible: true
+  before_script:
+    - rustc --version
+    - cargo --version
+
 include:
-  - local: ".gitlab/ci/base.yml"
   - local: ".gitlab/ci/runtime-image.yml"
   - local: ".gitlab/ci/no-code-gate.yml"
   - local: ".gitlab/ci/lint.yml"
@@ -11,8 +108,24 @@ workflow:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
-    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
-      when: never
-    - if: '$CI_COMMIT_BRANCH'
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: always
+    - if: '$CI_COMMIT_BRANCH == "develop"'
+      when: always
+    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+      changes:
+        compare_to: 'refs/heads/develop'
+        paths:
+          - "**/*.rs"
+          - "**/build.rs"
+          - "**/Cargo.toml"
+          - "**/Cargo.lock"
+          - "rust-toolchain*"
+          - ".cargo/**/*"
+          - "Dockerfile"
+          - "Dockerfile.*"
+          - "*/Dockerfile"
+          - "docker/**/*"
       when: always
     - when: never
+
