--- a/.gitlab/ci/quality.yml
+++ b/.gitlab/ci/quality.yml
@@ -13,11 +13,11 @@ coverage:
       - reports/coverage.xml
     expire_in: 1 week
   rules:
-    - !reference [.rust-changes, rules]
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_BRANCH'
-      allow_failure: true
+    - !reference [.rules-master-always, rules]
+    - !reference [.rules-mr-master-code, rules]
+    - !reference [.rules-mr-develop-code, rules]  
+    - !reference [.rules-dev-code, rules]
+    - !reference [.rules-feature-code-soft, rules]
     - when: never
 
 cargo-audit:
@@ -25,9 +25,9 @@ cargo-audit:
   script:
     - .gitlab/ci/scripts/cargo-audit.sh
   rules:
-    - !reference [.rust-changes, rules]
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_BRANCH'
-      allow_failure: true
+    - !reference [.rules-master-always, rules]
+    - !reference [.rules-mr-master-code, rules]
+    - !reference [.rules-mr-develop-code, rules]  
+    - !reference [.rules-dev-code, rules]
+    - !reference [.rules-feature-code-soft, rules]
     - when: never
