--- a/.gitlab/ci/release.yml
+++ b/.gitlab/ci/release.yml
@@ -1,5 +1,4 @@
 docker-build-and-push:
-  extends: .rust-changes
   stage: build & push
   image: docker:25
   services:
@@ -12,9 +11,7 @@ docker-build-and-push:
   script:
     - .gitlab/ci/scripts/docker-build-and-push.sh
   rules:
-    - !reference [.rust-changes, rules]
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_TAG'
+    - !reference [.rules-docker-build-and-push, rules]
 
 release:
   stage: release
@@ -24,4 +21,4 @@ release:
   script:
     - .gitlab/ci/scripts/gitlab-release-from-tag.sh
   rules:
-    - if: '$CI_COMMIT_TAG'
+    - !reference [.rules-tag-only, rules]
