--- a/.gitlab/ci/lint.yml
+++ b/.gitlab/ci/lint.yml
@@ -1,18 +1,23 @@
 fmt:
-  extends: .rust-changes
   stage: checks
   script:
     - .gitlab/ci/scripts/fmt.sh
+  rules:
+    - !reference [.rules-master-always, rules]
+    - !reference [.rules-mr-master-code, rules]
+    - !reference [.rules-mr-develop-code, rules] 
+    - !reference [.rules-dev-code, rules]          
+    - !reference [.rules-feature-code-soft, rules] 
+    - when: never
 
 clippy:
-  extends: .rust-changes
   stage: checks
   script:
     - .gitlab/ci/scripts/clippy.sh
   rules:
-    - !reference [.rust-changes, rules]
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    - if: '$CI_COMMIT_BRANCH'
-      allow_failure: true
+    - !reference [.rules-master-always, rules]
+    - !reference [.rules-mr-master-code, rules]
+    - !reference [.rules-mr-develop-code, rules]  
+    - !reference [.rules-dev-code, rules]         
+    - !reference [.rules-feature-code-soft, rules]
     - when: never
