--- a/.gitlab/ci/quality.yml
+++ b/.gitlab/ci/quality.yml
@@ -13,11 +13,32 @@ coverage:
       - reports/coverage.xml
     expire_in: 1 week
   rules:
-    - !reference [.rules-master-always, rules]
-    - !reference [.rules-mr-master-code, rules]
-    - !reference [.rules-mr-develop-code, rules]  
-    - !reference [.rules-dev-code, rules]
-    - !reference [.rules-feature-code-soft, rules]
+    - !reference [.rust-changes, rules]
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+      changes:
+        - "**/*.rs"
+        - "**/Cargo.toml"
+        - "**/Cargo.lock"
+        - Dockerfile
+        - .gitlab-ci.yml
+        - .gitlab/ci/**/*
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      changes:
+        - "**/*.rs"
+        - "**/Cargo.toml"
+        - "**/Cargo.lock"
+        - Dockerfile
+        - .gitlab-ci.yml
+        - .gitlab/ci/**/*
+    - if: '$CI_COMMIT_BRANCH'
+      changes:
+        - "**/*.rs"
+        - "**/Cargo.toml"
+        - "**/Cargo.lock"
+        - Dockerfile
+        - .gitlab-ci.yml
+        - .gitlab/ci/**/*
+      allow_failure: true
     - when: never
 
 cargo-audit:
@@ -25,9 +46,21 @@ cargo-audit:
   script:
     - .gitlab/ci/scripts/cargo-audit.sh
   rules:
-    - !reference [.rules-master-always, rules]
-    - !reference [.rules-mr-master-code, rules]
-    - !reference [.rules-mr-develop-code, rules]  
-    - !reference [.rules-dev-code, rules]
-    - !reference [.rules-feature-code-soft, rules]
+    - !reference [.rust-changes, rules]
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+      changes:
+        - "**/Cargo.lock"
+        - .gitlab-ci.yml
+        - .gitlab/ci/**/*
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      changes:
+        - "**/Cargo.lock"
+        - .gitlab-ci.yml
+        - .gitlab/ci/**/*
+    - if: '$CI_COMMIT_BRANCH'
+      changes:
+        - "**/Cargo.lock"
+        - .gitlab-ci.yml
+        - .gitlab/ci/**/*
+      allow_failure: true
     - when: never
