--- a/.gitlab/ci/release.yml
+++ b/.gitlab/ci/release.yml
@@ -1,4 +1,5 @@
 docker-build-and-push:
+  extends: .rust-changes
   stage: build & push
   image: docker:25
   services:
@@ -11,7 +12,9 @@ docker-build-and-push:
   script:
     - .gitlab/ci/scripts/docker-build-and-push.sh
   rules:
-    - !reference [.rules-docker-build-and-push, rules]
+    - !reference [.rust-changes, rules]
+    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_TAG'
 
 release:
   stage: release
@@ -21,4 +24,4 @@ release:
   script:
     - .gitlab/ci/scripts/gitlab-release-from-tag.sh
   rules:
-    - !reference [.rules-tag-only, rules]
+    - if: '$CI_COMMIT_TAG'
