Fix runtime-image job to be on schedule

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,10 +86,11 @@ variables:
 
 .rules-runtime-image:
   rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: on_success
     - changes: *runtime_image_paths
       when: on_success
     - when: never
-
 .rules-tag-only:
   rules:
     - if: '$CI_COMMIT_TAG'
