--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,6 +120,8 @@ workflow:
       when: always
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
+    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
+      when: never
     - if: '$CI_COMMIT_BRANCH == "master"'
       when: always
     - if: '$CI_COMMIT_BRANCH == "develop"'
