--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,8 @@ variables:
       when: never
     - changes: *rust_paths
       when: never
+    - changes: *runtime_image_paths
+      when: never
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: on_success
     - when: on_success
