--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,118 @@
+stages:
+  - bootstrap
+  - lint
+  - checks
+  - quality
+  - build & push
+  - release
+
+variables:
+  GIT_STRATEGY: fetch
+  GIT_FETCH_EXTRA_FLAGS: "--prune"
+  GIT_DEPTH: 1
+  GIT_SUBMODULE_STRATEGY: none
+  GIT_CLEAN_FLAGS: none
+  CARGO_TERM_COLOR: always
+  CI_RUST_VERSION: "1.91"
+  CI_RUST_IMAGE: "$CI_REGISTRY_IMAGE/runtime:rust-$CI_RUST_VERSION"
+  RUSTFLAGS: "-C debuginfo=2"
+
+.rust-change-paths: &rust_paths
+  - "**/*.rs"
+  - "**/build.rs"
+  - "**/Cargo.toml"
+  - "**/Cargo.lock"
+  - "rust-toolchain*"
+  - ".cargo/**/*"
+  - "Dockerfile"
+  - "Dockerfile.*"
+  - "*/Dockerfile"
+  - "docker/**/*"
+
+.runtime-image-change-paths: &runtime_image_paths
+  - .gitlab/ci/images/runtime/Dockerfile
+  - .gitlab/ci/images/runtime/**/*
+  - .gitlab/ci/runtime-image.yml
+  - .gitlab/ci/scripts/build-runtime-image.sh
+
+.rules-master-always:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: on_success
+
+.rules-mr-master-code:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+      changes: *rust_paths
+      when: on_success
+
+.rules-mr-develop-code:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "develop"'
+      changes: *rust_paths
+      when: on_success
+
+.rules-feature-code-soft:
+  rules:
+    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+      changes: *rust_paths
+      when: on_success
+      allow_failure: true
+
+.rules-dev-code:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "develop"'
+      changes: *rust_paths
+      when: on_success
+
+.rules-no-code-gate:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
+    - changes: *rust_paths
+      when: never
+    - changes: *runtime_image_paths
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: on_success
+    - when: on_success
+
+.rules-docker-build-and-push:
+  rules:
+    - if: '$CI_COMMIT_TAG'
+      when: on_success
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      changes: *rust_paths
+      when: on_success
+    - when: never
+
+.rules-runtime-image:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: on_success
+    - changes: *runtime_image_paths
+      when: on_success
+    - when: never
+.rules-tag-only:
+  rules:
+    - if: '$CI_COMMIT_TAG'
+      when: on_success
+    - when: never
+
+default:
+  image:
+    name: $CI_RUST_IMAGE         
+    pull_policy: always          
+  tags:
+    - primary
+  interruptible: true
+  before_script:
+    - rustc --version
+    - cargo --version
+
 include:
-  - local: ".gitlab/ci/base.yml"
   - local: ".gitlab/ci/runtime-image.yml"
+  - local: ".gitlab/ci/no-code-gate.yml"
   - local: ".gitlab/ci/lint.yml"
   - local: ".gitlab/ci/test.yml"
   - local: ".gitlab/ci/quality.yml"
@@ -8,7 +120,24 @@ include:
 
 workflow:
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: always
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: always
+    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
+      when: never
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: always
+    - if: '$CI_COMMIT_BRANCH == "develop"'
+      when: always
+    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+      changes:
+        compare_to: 'refs/heads/develop'
+        paths: *rust_paths
+      when: always
+    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+      changes:
+        compare_to: 'refs/heads/develop'
+        paths: *runtime_image_paths
       when: always
     - when: never
-
