--- a/.gitlab/ci/runtime-image.yml
+++ b/.gitlab/ci/runtime-image.yml
@@ -1,6 +1,6 @@
-build-runtime-image:
+raid-simulator-runtime-image:
   stage: bootstrap
-  resource_group: runtime-image   
+  resource_group: raid-simulator-runtime-image
   image: docker:25
   services:
     - name: docker:25-dind
@@ -15,3 +15,21 @@ build-runtime-image:
     - .gitlab/ci/scripts/build-runtime-image.sh
   rules:
     - !reference [.rules-runtime-image, rules]
+
+metrics-gateway-runtime-image:
+  stage: bootstrap
+  resource_group: metrics-gateway-runtime-image
+  image: docker:25
+  services:
+    - name: docker:25-dind
+      command: ["--tls=false"]
+  before_script: []
+  variables:
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ""
+    GO_RUNTIME_IMAGE_REPO: "$CI_REGISTRY_IMAGE/go-runtime"
+    GO_RUNTIME_BASE_IMAGE: "golang:${CI_GO_VERSION}"
+  script:
+    - .gitlab/ci/scripts/build-go-runtime-image.sh
+  rules:
+    - !reference [.rules-go-runtime-image, rules]
