--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,15 @@ variables:
       when: on_success
     - when: never
 
+.rules-docker-build-and-push-go:
+  rules:
+    - if: "$CI_COMMIT_TAG"
+      when: on_success
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      changes: *go_paths
+      when: on_success
+    - when: never
+
 .rules-runtime-image:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
